# grpc-browser

./: .gitignore  Cargo.toml  README.md
examples/client/: package.json  pnpm-lock.yaml
examples/client/src/: App.tsx
examples/client/src/lib/: grpc-browser.ts  index.ts  operation-bytes.ts  service.ts
examples/server/: Cargo.toml
examples/server/proto/: helloworld.proto
examples/server/src/: main.rs
src/: grpc_client.rs  main.rs  websocket_handler.rs
test/: index.html
