[package]
name = "grpc_browser"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = ["macros"] }
h2 = "0.3"
http = "0.2.9"
salvo = { version = "0.44.1", features = ["ws"]}
serde = "1"
serde_json = "1"
futures-util = { version = "0.3", default-features = false }
tokio-scoped = "0.2.0"